--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
 
 .error-text {
   color: #a94442;
-  text-align: left;
+  text-align: center;
   margin-bottom: 3rem !important;
   font-size: 1.4rem !important;
   font-family: Poppins-Medium, Arial, Helvetica, sans-serif !important;
